public/global.css
html,body {
    height: 100%;
    margin: 0;
}

body {
    font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
}

.float-left {float:left;}
.float-right {float: right;}

h1.page-heading {font-family: tex_gyre_pagellaregular;
    color: #000;
    font-weight: 500;
    font-size: 3rem;
	margin-bottom: 1rem;
	vertical-align: middle;
	}

.pigeon-image {width: 150px; height: 142px; margin-left: auto;}
.pigeon-image-mobile {width: 150px;}
.buildings {width: 350px; height: 201.719px; margin:1rem 0;}
#subtitle {background-color: #FFF;}
.map-text {font-size:1.25rem;}

#sub {
    margin: 1rem 0;
    /*background-color: #d6acd1;
    padding: 1rem;*/
}

